--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@adminjs/express": "^6.0.1",
+    "@adminjs/mongoose": "^4.0.0",
+    "@adminjs/nestjs": "^6.0.1",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^9.0.0 ",
     "@nestjs/config": "^2.2.0",
@@ -33,10 +36,13 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/websockets": "^9.4.3",
+    "adminjs": "^7.3.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.7",
