--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.2.0",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
     "jwt-decode": "^3.1.2",
@@ -48,6 +49,7 @@
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "sharp": "^0.33.0",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   },
@@ -60,6 +62,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
     "@types/nodemailer": "^6.4.14",
+    "@types/sharp": "^0.32.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
