--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/websockets": "^9.4.3",
+    "@types/ioredis": "^5.0.0",
     "adminjs": "^7.3.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -44,6 +45,7 @@
     "crypto-js": "^4.2.0",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
+    "ioredis": "^5.4.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.7",
