--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@adminjs/mongoose": "^4.0.0",
     "@adminjs/nestjs": "^6.0.1",
     "@nestjs-modules/mailer": "^1.9.1",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^9.0.0 ",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -36,9 +37,13 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/websockets": "^9.4.3",
+    "@types/cache-manager": "^4.0.6",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/ioredis": "^5.0.0",
     "adminjs": "^7.3.0",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^5.5.2",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
