--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-session": "^1.17.3",
     "ioredis": "^5.4.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.30.1",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
