--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ioredis": "^5.4.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
